// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/CircularProgress Color 1`] = `
<CircularProgress
  colorIndicator="#f44336"
  colorTrack="#000000"
  size="md"
>
  <WithStyles(CircularProgressComp)
    colorIndicator="#f44336"
    colorTrack="#000000"
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    size="md"
    theme={Object {}}
  >
    <CircularProgressComp
      classes={
        Object {
          "@keyframes spin": undefined,
          "md": "CircularProgressComp-md-0-3-97",
          "root": "CircularProgressComp-root-0-3-96",
          "sm": "CircularProgressComp-sm-0-3-98",
        }
      }
      colorIndicator="#f44336"
      colorTrack="#000000"
      size="md"
    >
      <div
        className="CircularProgressComp-root-0-3-96 CircularProgressComp-md-0-3-97"
        style={
          Object {
            "borderColor": "#000000",
            "borderTopColor": "#f44336",
          }
        }
      />
    </CircularProgressComp>
  </WithStyles(CircularProgressComp)>
</CircularProgress>
`;

exports[`Storyshots Components/CircularProgress Variant md 1`] = `
<CircularProgress
  size="md"
>
  <WithStyles(CircularProgressComp)
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    size="md"
    theme={Object {}}
  >
    <CircularProgressComp
      classes={
        Object {
          "@keyframes spin": undefined,
          "md": "CircularProgressComp-md-0-3-97",
          "root": "CircularProgressComp-root-0-3-96",
          "sm": "CircularProgressComp-sm-0-3-98",
        }
      }
      size="md"
    >
      <div
        className="CircularProgressComp-root-0-3-96 CircularProgressComp-md-0-3-97"
        style={
          Object {
            "borderColor": undefined,
            "borderTopColor": undefined,
          }
        }
      />
    </CircularProgressComp>
  </WithStyles(CircularProgressComp)>
</CircularProgress>
`;

exports[`Storyshots Components/CircularProgress Variant sm 1`] = `
<CircularProgress
  size="sm"
>
  <WithStyles(CircularProgressComp)
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    size="sm"
    theme={Object {}}
  >
    <CircularProgressComp
      classes={
        Object {
          "@keyframes spin": undefined,
          "md": "CircularProgressComp-md-0-3-97",
          "root": "CircularProgressComp-root-0-3-96",
          "sm": "CircularProgressComp-sm-0-3-98",
        }
      }
      size="sm"
    >
      <div
        className="CircularProgressComp-root-0-3-96 CircularProgressComp-sm-0-3-98"
        style={
          Object {
            "borderColor": undefined,
            "borderTopColor": undefined,
          }
        }
      />
    </CircularProgressComp>
  </WithStyles(CircularProgressComp)>
</CircularProgress>
`;
